tests/src/frontend/syntax/invalid/const_pattern6.sk
class C(private x: Int)

const MyC: C = C(42);

fun shouldFail(x: Int): String {
  C(x) match {
  | MyC -> "Pass\n"
  | _ -> "Fail\n"
  }
}
